syntax = "proto3";

import "message.proto";

option java_multiple_files = true;
option java_package = "com.arth.sakimq.protocol";
option java_outer_classname = "SakiMQTransMsg";

// Transport message definition
message TransportMessage {
  MessageType type = 1;
  int64 seq = 2;
  int64 timestamp = 3;
  oneof payload {
    MessagePack message_pack = 4;    // for MessageTye = MESSAGE
    AckPayload ack = 5;              // for MessageTye = ACK
    ConnectPayload connect = 6;      // for MessageTye = CONNECT
  }
}

// Enumeration of transport message types
enum MessageType {
  MESSAGE = 0;   // i.e., the actual messages of SakiMQ, which should be distinguished from transport messages
  ACK = 1;
  HEARTBEAT = 2;
  CONNECT = 3;
  DISCONNECT = 4;
}

// Data structure for ACK messages
message AckPayload {
  int32 ack_message_id = 1;
  bool success = 2;
  string error_message = 3;
}

// Data structure for CONNECT messages
message ConnectPayload {
  string client_id = 1;
  string username = 2;
  string password = 3;
}